--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "twig/twig": "^2.4"
+        "twig/twig": "^2.4",
+        "pecee/simple-router": "^3.3"
     },
     "autoload": {
         "psr-4": {
