--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,5 +6,7 @@ RewriteEngine On
 #
 # RewriteBase /
 
-RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{SCRIPT_FILENAME} !-d
+RewriteCond %{SCRIPT_FILENAME} !-f
+
 RewriteRule ^ index.php [QSA,L]
